--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #000; /
+  background-color: #000; 
   color: #fff; 
   line-height: 1.6;
 }
@@ -238,8 +238,6 @@ footer p {
   }
 }
 
-.car-image{
-  width: 500px;
-  opacity:0.9;
-  length : 200px;
+{
+  c
 }
